[gd_scene load_steps=53 format=2]

[ext_resource path="res://scenes/player/cards/assets/card.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/cards/card.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/cards/assets/lock.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/cards/assets/gun.png" type="Texture" id=4]
[ext_resource path="res://scenes/player/cards/assets/wing.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/cards/assets/laser.png" type="Texture" id=6]
[ext_resource path="res://scenes/player/cards/assets/shotgun.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/SalmaproMedium.otf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/coin.png" type="Texture" id=9]
[ext_resource path="res://scenes/player/cards/assets/timeheals.png" type="Texture" id=10]
[ext_resource path="res://scenes/player/cards/assets/extraheart.png" type="Texture" id=11]
[ext_resource path="res://scenes/player/cards/assets/coinmine.png" type="Texture" id=12]
[ext_resource path="res://scenes/player/cards/assets/description.png" type="Texture" id=13]
[ext_resource path="res://scenes/player/cards/assets/square.png" type="Texture" id=14]
[ext_resource path="res://scenes/player/cards/assets/attract.png" type="Texture" id=15]
[ext_resource path="res://scenes/player/cards/assets/skull.png" type="Texture" id=16]
[ext_resource path="res://scenes/player/cards/assets/knockback.png" type="Texture" id=17]
[ext_resource path="res://scenes/player/cards/assets/unoreverse.png" type="Texture" id=18]
[ext_resource path="res://scenes/player/cards/assets/gravity.png" type="Texture" id=19]
[ext_resource path="res://scenes/player/cards/assets/doubleloot.png" type="Texture" id=20]
[ext_resource path="res://scenes/player/cards/assets/timelock.png" type="Texture" id=21]
[ext_resource path="res://scenes/player/cards/assets/lemon.png" type="Texture" id=22]
[ext_resource path="res://scenes/player/cards/assets/steelnerves.png" type="Texture" id=23]
[ext_resource path="res://scenes/player/cards/assets/breakleg.png" type="Texture" id=24]
[ext_resource path="res://scenes/player/cards/assets/lifesteal.png" type="Texture" id=25]
[ext_resource path="res://scenes/player/cards/assets/backshield.png" type="Texture" id=26]
[ext_resource path="res://scenes/player/cards/assets/gutpain.png" type="Texture" id=27]
[ext_resource path="res://scenes/player/cards/assets/stealtheshow.png" type="Texture" id=28]
[ext_resource path="res://scenes/player/cards/assets/buttons/1.png" type="Texture" id=29]
[ext_resource path="res://scenes/player/cards/assets/buttons/auto.png" type="Texture" id=30]
[ext_resource path="res://scenes/player/cards/assets/buttons/3.png" type="Texture" id=31]
[ext_resource path="res://scenes/player/cards/assets/buttons/2.png" type="Texture" id=32]
[ext_resource path="res://scenes/player/cards/assets/buttons/4.png" type="Texture" id=33]
[ext_resource path="res://scenes/player/cards/assets/buttons/rightclick.png" type="Texture" id=34]
[ext_resource path="res://scenes/player/cards/assets/buttons/leftclick.png" type="Texture" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 64 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=14]
size = 203
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=17]
size = 146
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 37.6471, 65.8823 )

[sub_resource type="DynamicFont" id=13]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=15]
size = 50
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 8 )

[node name="card" type="KinematicBody2D"]
scale = Vector2( 0.85, 0.85 )
z_index = 1
collision_layer = 0
collision_mask = 256
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
scale = Vector2( 0.0694732, 0.0694732 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -56.4706
margin_top = -75.2941
margin_right = 55.5294
margin_bottom = 75.7059
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
flat = true

[node name="upgradepane" type="Sprite" parent="."]
self_modulate = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
position = Vector2( -0.349769, 44.1609 )
rotation = 1.5708
scale = Vector2( 0.0285687, 0.0438957 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="upgradepane"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = -619.0
margin_top = 849.0
margin_right = 431.0
margin_bottom = 1319.0
rect_rotation = -90.0
rect_scale = Vector2( 1.6, 2.5 )
custom_fonts/font = SubResource( 14 )
text = "Upgrades 
"
align = 1

[node name="Label" type="Label" parent="upgradepane/Label"]
modulate = Color( 1, 1, 1, 0.635294 )
margin_left = 133.583
margin_top = 288.176
margin_right = 904.583
margin_bottom = 456.176
custom_fonts/font = SubResource( 17 )
text = "(Soon...ish)"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 5.60985e-07, 0 )
shape = SubResource( 7 )

[node name="locked" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="darkenpane" type="Sprite" parent="locked"]
modulate = Color( 0, 0, 0, 0.784314 )
scale = Vector2( 0.0694732, 0.0694732 )
texture = ExtResource( 1 )

[node name="Lock" type="Sprite" parent="locked"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 0, 22.3529 )
scale = Vector2( 0.0575973, 0.0575973 )
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="locked"]
margin_left = -37.6471
margin_top = 7.05882
margin_right = 52.3529
margin_bottom = 107.059
grow_horizontal = 2

[node name="pricetag" type="Label" parent="locked/CenterContainer"]
self_modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
margin_left = 18.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 13 )
text = "254"

[node name="coin" type="Sprite" parent="locked/CenterContainer/pricetag"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( -9.41174, 18.5883 )
scale = Vector2( 0.0264059, 0.0264059 )
texture = ExtResource( 9 )

[node name="purchase" type="Button" parent="locked"]
margin_left = -56.0
margin_top = -75.0
margin_right = 56.0
margin_bottom = 75.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
flat = true

[node name="Description" type="Sprite" parent="."]
visible = false
position = Vector2( 385.882, -2.1684e-19 )
scale = Vector2( 0.70362, 0.70362 )
z_index = 3
texture = ExtResource( 13 )

[node name="title" type="Label" parent="Description"]
modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
margin_left = -308.0
margin_top = -161.0
margin_right = 308.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 15 )
align = 1
autowrap = true

[node name="description" type="Label" parent="Description"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = -107.0
margin_top = -27.0
margin_right = 308.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 16 )
autowrap = true

[node name="Square" type="Sprite" parent="Description"]
position = Vector2( -227.396, 63.537 )
scale = Vector2( 1.04821, 1.04821 )
texture = ExtResource( 14 )

[node name="Button" type="Node2D" parent="Description"]

[node name="1" type="Sprite" parent="Description/Button"]
visible = false
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 29 )

[node name="2" type="Sprite" parent="Description/Button"]
visible = false
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 32 )

[node name="3" type="Sprite" parent="Description/Button"]
visible = false
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 31 )

[node name="4" type="Sprite" parent="Description/Button"]
visible = false
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 33 )

[node name="auto" type="Sprite" parent="Description/Button"]
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 30 )

[node name="leftclick" type="Sprite" parent="Description/Button"]
visible = false
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 35 )

[node name="rightclick" type="Sprite" parent="Description/Button"]
visible = false
position = Vector2( -227.395, 61.8649 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 34 )

[node name="icons" type="Node2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="1" type="Sprite" parent="icons"]
visible = false
position = Vector2( 27.0441, -255.309 )
scale = Vector2( 1.06493, 1.06493 )
texture = ExtResource( 4 )

[node name="2" type="Sprite" parent="icons"]
visible = false
position = Vector2( 27.0441, -255.309 )
scale = Vector2( 1.06493, 1.06493 )
texture = ExtResource( 7 )

[node name="3" type="Sprite" parent="icons"]
visible = false
position = Vector2( 27.0441, -255.309 )
scale = Vector2( 1.06493, 1.06493 )
texture = ExtResource( 6 )

[node name="4" type="Sprite" parent="icons"]
visible = false
position = Vector2( 27.0441, -255.309 )
scale = Vector2( 1.06493, 1.06493 )
texture = ExtResource( 5 )

[node name="5" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.13163, 1.13163 )
texture = ExtResource( 10 )

[node name="6" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.01688, 1.01688 )
texture = ExtResource( 11 )

[node name="7" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.18636, 1.18636 )
texture = ExtResource( 12 )

[node name="8" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.18636, 1.18636 )
texture = ExtResource( 15 )

[node name="9" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.03806, 1.03806 )
texture = ExtResource( 16 )

[node name="10" type="Sprite" parent="icons"]
visible = false
position = Vector2( 2.09808e-05, -282.353 )
scale = Vector2( 1.12986, 1.12986 )
texture = ExtResource( 17 )

[node name="11" type="Sprite" parent="icons"]
visible = false
position = Vector2( 2.09808e-05, -282.353 )
scale = Vector2( 1.12986, 1.12986 )
texture = ExtResource( 18 )

[node name="12" type="Sprite" parent="icons"]
visible = false
position = Vector2( 2.09808e-05, -282.354 )
scale = Vector2( 1.12986, 1.12986 )
texture = ExtResource( 19 )

[node name="13" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.24285, 1.24285 )
texture = ExtResource( 20 )

[node name="14" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.13163, 1.13163 )
texture = ExtResource( 21 )

[node name="15" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.01776, 1.01776 )
texture = ExtResource( 22 )

[node name="16" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -247.059 )
scale = Vector2( 1.07381, 1.07381 )
texture = ExtResource( 23 )

[node name="17" type="Sprite" parent="icons"]
visible = false
position = Vector2( 0, -282.353 )
scale = Vector2( 1.12986, 1.12986 )
texture = ExtResource( 24 )

[node name="18" type="Sprite" parent="icons"]
visible = false
position = Vector2( 6.10352e-05, -282.353 )
scale = Vector2( 1.07337, 1.07337 )
texture = ExtResource( 25 )

[node name="19" type="Sprite" parent="icons"]
visible = false
position = Vector2( -11.7647, -235.294 )
scale = Vector2( 1.28522, 1.28522 )
texture = ExtResource( 26 )

[node name="20" type="Sprite" parent="icons"]
visible = false
position = Vector2( 11.7647, -235.294 )
scale = Vector2( 1.14752, 1.14752 )
texture = ExtResource( 27 )

[node name="21" type="Sprite" parent="icons"]
visible = false
position = Vector2( -23.5294, -258.823 )
scale = Vector2( 1.12986, 1.12986 )
texture = ExtResource( 28 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="locked/purchase" to="." method="_on_purchase_mouse_entered"]
[connection signal="mouse_exited" from="locked/purchase" to="." method="_on_purchase_mouse_exited"]
[connection signal="pressed" from="locked/purchase" to="." method="_on_purchase_pressed"]
